                                                     -*- coding: utf-8 -*-
Changes for APR 1.5.2

  *) Windows cmake build: Fix an incompatibility with cmake 2.8.12 and
     later.  [Jeff Trawick]

  *) apr_global_mutex/apr_proc_mutex: Resolve failures with the 
     POSIX sem implementation in environments which receive signals.
     [Jeff Trawick]

  *) apr_skiplist: Fix potential corruption of skiplists leading to 
     results or crashes. [Takashi Sato <takashi tks st>, Eric Covener]
     PR 56654.

  *) Improve platform detection by updating config.guess and config.sub.
     [Rainer Jung]

Changes for APR 1.5.1

  *) apr_os_proc_mutex_get() on Unix:  Avoid segfault for cross-
     process pthread mutexes.  [Yann Ylavic <ylavic.dev gmail.com>]

  *) When using shmget-based shared memory, the ID used for ftok is
     now an APR hash of the filename instead of the constant '1'.
     We do this to help avoid collisions. PR 53996 [Jim Jagielski]

  *) apr_socket_atreadeof(): Fix breakage on OS X. [Jim Jagielski]

  *) Fix POSIX shared memory (shm_open) use for named shared memory.
     Includes adding '--enable-posix-shm' to force POSIX shm if
     available, and OS X compatibility. PR 55928.
     [Jozef Hatala <jh-asf skrt org>, Jim Jagielski]

  *) Fix race condition when calling apr_dir_make_recursive from
     multiple threads on Windows.
     [Bert Huijben]

  *) Fix apr_escape.c compilation errors on EBCDIC platforms.
     [Eric Covener]

  *) FreeBSD 10: Correct a regression in 1.5.0 which affected non-
     blocking sockets in some applications, including httpd.  [Jeff
     Trawick]

  *) Windows cmake build: Fix incorrect installation of some .pdb
     files.  Fix incorrect use of some logic intended for Windows 9x,
     including legacy filesystem interfaces and dynamic loading of
     some Windows APIs.  [Jeff Trawick]

  *) apr_skiplist: Add compatibility with C++ applications.
     [Jeff Trawick]
